eyebleed fix

--- a/homepagestyle.css
+++ b/homepagestyle.css
@@ -1,11 +1,11 @@
 body {
-  background-color: #000000;
-  background-repeat: no-repeat;
-  background-position: center -220px;
-  background-image: -webkit-linear-gradient(270deg,rgba(239,110,199,1.00) 42.49%,rgba(22,38,107,0.00) 100%), url("portfolio/2021/selfportrait.png");
-  background-image: -moz-linear-gradient(270deg,rgba(239,110,199,1.00) 42.49%,rgba(22,38,107,0.00) 100%), url("portfolio/2021/selfportrait.png");
-  background-image: -o-linear-gradient(270deg,rgba(239,110,199,1.00) 42.49%,rgba(22,38,107,0.00) 100%), url("portfolio/2021/selfportrait.png");
-  background-image: linear-gradient(180deg,rgba(239,110,199,1.00) 42.49%,rgba(22,38,107,0.00) 100%), url("portfolio/2021/selfportrait.png");
+    background-color: #000000;
+    background-repeat: no-repeat;
+    background-position: center -220px;
+    background-image: -webkit-linear-gradient(270deg,rgba(96,120,143,1.00) 42.49%,rgba(22,38,107,0.00) 100%), url("portfolio/2021/selfportrait.png");
+    background-image: -moz-linear-gradient(270deg,rgba(96,120,143,1.00) 42.49%,rgba(22,38,107,0.00) 100%), url("portfolio/2021/selfportrait.png");
+    background-image: -o-linear-gradient(270deg,rgba(96,120,143,1.00) 42.49%,rgba(22,38,107,0.00) 100%), url("portfolio/2021/selfportrait.png");
+    background-image: linear-gradient(180deg,rgba(96,120,143,1.00) 42.49%,rgba(22,38,107,0.00) 100%), url("portfolio/2021/selfportrait.png");
 }
 .head{
   text-align: center;
